Issue #9: now supports upper or lower case 'skip' in parsing

--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ cobertura {
 
 defaultTasks 'clean', 'build', 'groovydoc'
 
-version = '0.3.2'
+version = '0.3.2a'
 
 repositories {
     mavenCentral()
