--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,38 @@
-buildscript {
-	repositories {
-	    mavenCentral()
-	}
-	
-	dependencies {
-		classpath "net.saliman:gradle-cobertura-plugin:2.0.0"
-	}
-}
+import org.apache.tools.ant.Project;
 
 apply plugin: 'groovy'
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
 
+group = 'org.gsheets.kktec'
+version = '0.3.2a'
+description = 'A simple Groovy DSL wrapper over Apache POI'
+
+defaultTasks 'clean', 'build', 'groovydoc', 'sourceJar'
+
 apply plugin: 'eclipse'
 apply plugin: 'idea'
+
+repositories {
+	jcenter()
+    mavenCentral()
+}
+
+dependencies {
+    compile 'org.codehaus.groovy:groovy-all:1.8.8'
+	
+    testCompile 'junit:junit:4.10'
+	testCompile 'org.hamcrest:hamcrest-core:1.3'
+	testCompile 'org.hamcrest:hamcrest-library:1.3'
+	testCompile 'org.spockframework:spock-core:0.7-groovy-1.8'
+	
+    compile 'org.apache.poi:poi:3.8'
+    compile 'org.apache.poi:poi-ooxml:3.8'
+}
+
+task wrapper(type: Wrapper) {
+	gradleVersion = '1.10'
+}
 
 apply plugin: 'codenarc'
 codenarc {
@@ -21,39 +40,17 @@ codenarc {
 	configFile = file('config/codenarc/rules.groovy')
 }
 
-
 apply plugin: 'cobertura'
 cobertura {
 	coverageSourceDirs = [project.sourceSets.main.groovy.srcDirs]
 }
 
 apply plugin: 'maven-publish'
-
-
-defaultTasks 'clean', 'build', 'groovydoc'
-
-group = 'org.gsheets.kktec'
-version = '0.3.2a'
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    compile 'org.codehaus.groovy:groovy-all:1.8.8'
-	
-	testCompile 'org.hamcrest:hamcrest-core:1.3'
-	testCompile 'org.hamcrest:hamcrest-library:1.3'
-    testCompile 'junit:junit:4.10'
-	testCompile 'org.spockframework:spock-core:0.7-groovy-1.8'
-	
-    compile 'org.apache.poi:poi:3.8'
-    compile 'org.apache.poi:poi-ooxml:3.8'
-}
+apply plugin: 'bintray'
 
 
 task sourceJar(type: Jar) {
-  from sourceSets.main.allGroovy
+  from sourceSets*.allSource
 }
 
 publishing {
@@ -67,5 +64,35 @@ publishing {
 			}
 		}
 	}
+}
+
+buildscript {
+	repositories {
+		jcenter()
+		mavenCentral()
+	}
+	
+	dependencies {
+		classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.3'
+		classpath "net.saliman:gradle-cobertura-plugin:2.0.0"
+	}
+}
+
+
+bintrayUpload.dependsOn jar
+
+bintray {
+	user = bintray_user
+	key = bintray_api_key
+//    configurations = ['deployables'] // When uploading configuration files
+	publications = ['gsheets'] // When uploading Maven-based publication files
+	pkg {
+		repo = 'gsheets'
+		name = 'kktec-gsheets-groovy1'
+		desc = 'A simple Groovy DSL wrapper over Apache POI'
+		licenses = ['Apache-2.0']
+		labels = ['gsheets', 'groovy', 'gradle', 'poi', 'excel']
+	}
+	dryRun = dry_run // whether to run this as dry-run, without deploying
 }
 
