--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import org.apache.tools.ant.Project;
-
 apply plugin: 'groovy'
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
@@ -60,7 +58,7 @@ publishing {
 			
 			artifact sourceJar {
 				classifier 'sources'
-				extension 'zip'
+				extension 'jar'
 			}
 		}
 	}
@@ -79,20 +77,25 @@ buildscript {
 }
 
 
-bintrayUpload.dependsOn jar
+bintrayUpload.dependsOn jar, sourceJar
+
 
 bintray {
 	user = bintray_user
 	key = bintray_api_key
 //    configurations = ['deployables'] // When uploading configuration files
 	publications = ['gsheets'] // When uploading Maven-based publication files
+	
+	def projectName = project.name
+	def projectDescription = project.description
+
 	pkg {
-		repo = 'gsheets'
-		name = 'kktec-gsheets-groovy1'
-		desc = 'A simple Groovy DSL wrapper over Apache POI'
+		repo = 'maven'
+		name = projectName
+		desc = projectDescription
 		licenses = ['Apache-2.0']
 		labels = ['gsheets', 'groovy', 'gradle', 'poi', 'excel']
 	}
-	dryRun = dry_run // whether to run this as dry-run, without deploying
+	dryRun = false // whether to run this as dry-run, without deploying
 }
 
