--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ sourceCompatibility = 1.6
 targetCompatibility = 1.6
 
 group = 'org.gsheets.kktec'
-version = '0.3.2a'
+version = '0.3.2b'
 description = 'A simple Groovy DSL wrapper over Apache POI'
 
 defaultTasks 'clean', 'build', 'groovydoc', 'sourceJar'
