--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'groovy'
-sourceCompatibility = 1.6
-targetCompatibility = 1.6
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 group = 'org.gsheets.kktec'
-version = '0.3.2b'
+version = '0.4.0'
 description = 'A simple Groovy DSL wrapper over Apache POI'
 
 defaultTasks 'clean', 'build', 'groovydoc', 'sourceJar'
@@ -17,19 +17,17 @@ repositories {
 }
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:1.8.8'
+    compile 'org.codehaus.groovy:groovy-all:2.0.8'
 	
-    testCompile 'junit:junit:4.10'
-	testCompile 'org.hamcrest:hamcrest-core:1.3'
+	compile 'org.apache.poi:poi:3.8'
+	compile 'org.apache.poi:poi-ooxml:3.8'
+
+	testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
 	testCompile 'org.hamcrest:hamcrest-library:1.3'
-	testCompile 'org.spockframework:spock-core:0.7-groovy-1.8'
-	
-    compile 'org.apache.poi:poi:3.8'
-    compile 'org.apache.poi:poi-ooxml:3.8'
 }
 
 task wrapper(type: Wrapper) {
-	gradleVersion = '1.10'
+	gradleVersion = '1.11'
 }
 
 apply plugin: 'codenarc'
