--- a/build.gradle
+++ b/build.gradle
@@ -1,103 +1,104 @@
-apply plugin: 'groovy'
+buildscript {
+    repositories {
+        jcenter()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.3'
+    }
+}
+
+plugins {
+    id 'groovy'
+    id 'idea'
+    id 'eclipse'
+    id 'codenarc'
+    id 'com.jfrog.bintray' version '1.3'
+    id 'net.saliman.cobertura' version '2.2.8'
+}
+
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 group = 'org.gsheets.kktec'
-version = '0.4.1'
+version = '0.4.2-SNAPSHOT'
 description = 'A simple Groovy DSL wrapper over Apache POI'
 
 defaultTasks 'clean', 'build', 'cobertura'
 
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-
 repositories {
-	jcenter()
+    jcenter()
     mavenCentral()
 }
 
 dependencies {
-	compile 'org.codehaus.groovy:groovy-all:2.0.8'
-	
-	compile 'org.apache.poi:poi:3.8'
-	compile 'org.apache.poi:poi-ooxml:3.8'
+    compile 'org.codehaus.groovy:groovy-all:2.3.11'
 
-	testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
-	testCompile 'org.hamcrest:hamcrest-library:1.3'
+    compile 'xml-apis:xml-apis:1.0.b2'
+    compile 'org.apache.poi:poi:3.8'
+    compile 'org.apache.poi:poi-ooxml:3.8'
+
+    testCompile 'org.spockframework:spock-core:1.0-groovy-2.3'
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
+
+    testRuntime "org.slf4j:slf4j-log4j12:1.7.5"
+    testRuntime "log4j:log4j:1.2.7"
 }
 
 task wrapper(type: Wrapper) {
-	gradleVersion = '2.3'
+    gradleVersion = '2.5'
 }
 
-apply plugin: 'codenarc'
+//apply plugin: 'codenarc'
 codenarc {
-	toolVersion = '0.22'
-	configFile = file('config/codenarc/rules.groovy')
+    toolVersion = '0.24'
+    configFile = file('config/codenarc/rules.groovy')
 }
 
-apply plugin: 'cobertura'
-//plugins {
-//	id 'net.saliman.cobertura' version '2.2.5'
-//}
 cobertura {
-	coverageSourceDirs = [project.sourceSets.main.groovy.srcDirs]
+//	coverageSourceDirs = [project.sourceSets.main.groovy.srcDirs]
 }
 
 apply plugin: 'maven-publish'
-apply plugin: 'bintray'
-
 
 task sourceJar(type: Jar) {
-  from sourceSets*.allSource
+    from sourceSets*.allSource
 }
 
 publishing {
-	publications {
-		gsheets(MavenPublication) {
-			from components.java
-			
-			artifact sourceJar {
-				classifier 'sources'
-				extension 'jar'
-			}
-		}
-	}
-}
+    publications {
+        gsheets(MavenPublication) {
+            from components.java
 
-buildscript {
-	repositories {
-		jcenter()
-		mavenCentral()
-	}
-	
-	dependencies {
-		classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.3'
-		classpath 'net.saliman:gradle-cobertura-plugin:2.2.5'
-	}
+            artifact sourceJar {
+                classifier 'sources'
+                extension 'jar'
+            }
+        }
+    }
 }
-
 
 bintrayUpload.dependsOn jar, sourceJar
 
 
 bintray {
-	user = bintray_user
-	key = bintray_api_key
+    user = bintray_user
+    key = bintray_api_key
 //    configurations = ['deployables'] // When uploading configuration files
-	publications = ['gsheets'] // When uploading Maven-based publication files
-	
-	def projectName = project.name
-	def projectDescription = project.description
+    publications = ['gsheets'] // When uploading Maven-based publication files
 
-	pkg {
-		repo = 'maven'
-		name = projectName
-		desc = projectDescription
-		licenses = ['Apache-2.0']
-		labels = ['gsheets', 'groovy', 'gradle', 'poi', 'excel']
-	}
-	dryRun = false // whether to run this as dry-run, without deploying
+    def projectName = project.name
+    def projectDescription = project.description
+
+    pkg {
+        repo = 'maven'
+        name = projectName
+        desc = projectDescription
+        licenses = ['Apache-2.0']
+        labels = ['gsheets', 'groovy', 'gradle', 'poi', 'excel']
+    }
+    dryRun = false // whether to run this as dry-run, without deploying
 }
 
 
