--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 group = 'org.gsheets.kktec'
-version = '0.4.2'
+version = '0.4.3-SNAPSHOT'
 description = 'A simple Groovy DSL wrapper over Apache POI'
 
 defaultTasks 'clean', 'build', 'cobertura'
@@ -47,7 +47,7 @@ dependencies {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.9'
+    gradleVersion = '3.1'
 }
 
 //apply plugin: 'codenarc'
